Actualizar secrets.toml

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -5,5 +5,5 @@ dialect = "mysql"
 host = "localhost"
 port = 3306
 database = "meiklabs_djTemp"
-username = "meiklabs_superadmin"
-password = "h0}94gtm~j-E"
+username = ""
+password = "”
